Fixed some TODO comments; renamed binary to arbd

--- a/src/Makefile
+++ b/src/Makefile
@@ -49,7 +49,7 @@ LD_FLAGS += -lcuda
 
 ### Sources
 CC_SRC := $(wildcard *.cpp)
-CC_SRC := $(filter-out runBrownTown.cpp, $(CC_SRC))
+CC_SRC := $(filter-out arbd.cpp, $(CC_SRC))
 CU_SRC := $(wildcard *.cu)
 
 CC_OBJ := $(patsubst %.cpp, %.o, $(CC_SRC))
@@ -57,15 +57,15 @@ CU_OBJ := $(patsubst %.cu, %.o, $(CU_SRC))
 
 
 ### Targets
-TARGET = runBrownCUDA
+TARGET = arbd
 
 all: $(TARGET)
 	@echo "Done ->" $(TARGET)
 
-$(TARGET): $(CU_OBJ) $(CC_OBJ) runBrownTown.cpp vmdsock.c imd.c imd.h
+$(TARGET): $(CU_OBJ) $(CC_OBJ) arbd.cpp vmdsock.c imd.c imd.h
 	$(NVCC) $(NVLD_FLAGS) $(CU_OBJ) $(CC_OBJ) -o $(TARGET)_link.o
 	$(NVCC) $(NVLD_FLAGS) $(CU_OBJ) -o $(TARGET)_link.o
-	$(CC) $(CC_FLAGS) $(EX_FLAGS) runBrownTown.cpp vmdsock.c imd.c $(TARGET)_link.o $(CU_OBJ) $(CC_OBJ) $(LD_FLAGS)  -o $(TARGET)
+	$(CC) $(CC_FLAGS) $(EX_FLAGS) arbd.cpp vmdsock.c imd.c $(TARGET)_link.o $(CU_OBJ) $(CC_OBJ) $(LD_FLAGS)  -o $(TARGET)
 
 .SECONDEXPANSION:
 $(CU_OBJ): %.o: %.cu $$(wildcard %.h) $$(wildcard %.cuh)
