Move CMakeLists.txt to project root

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,42 +86,42 @@ set(CMAKE_MACOSX_RPATH 1)	# Unsure if this works for CMAKE_BUIlD_RPATH, or just 
 set(CMAKE_BUILD_RPATH "${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES}")
 
 # set(CMAKE_VERBOSE_MAKEFILE True)
-add_executable(arbd arbd.cpp
-  Configuration.cpp
-  FlowForce.cpp
-  GPUManager.cpp
-  Scatter.cpp
-  SignalManager.cpp
-  WKFUtils.cpp
-  Angle.cu
-  BaseGrid.cu
-  BrownianParticle.cu
-  BrownianParticleType.cpp
-  RigidBodyController.cu
-  RigidBody.cu
-  RigidBodyGrid.cu
-  RigidBodyType.cu
-  CellDecomposition.cu
-  ComputeForce.cuh
-  ComputeForce.cu
-  ComputeGridGrid.cuh
-  ComputeGridGrid.cu
-  CudaUtil.cu
-  CudaUtil.cuh
-  Dihedral.cu
-  Exclude.cu
-  GrandBrownTown.cu
-  GrandBrownTown.cuh
-  imd.cpp
-  vmdsock.cpp
-  JamesBond.cu
-  RandomCUDA.cu
-  Reservoir.cu
-  TabulatedAngle.cu
-  TabulatedDihedral.cu
-  TabulatedMethods.cuh
-  TabulatedPotential.cu
-  useful.cu
+add_executable(arbd src/arbd.cpp
+  src/Configuration.cpp
+  src/FlowForce.cpp
+  src/GPUManager.cpp
+  src/Scatter.cpp
+  src/SignalManager.cpp
+  src/WKFUtils.cpp
+  src/Angle.cu
+  src/BaseGrid.cu
+  src/BrownianParticle.cu
+  src/BrownianParticleType.cpp
+  src/RigidBodyController.cu
+  src/RigidBody.cu
+  src/RigidBodyGrid.cu
+  src/RigidBodyType.cu
+  src/CellDecomposition.cu
+  src/ComputeForce.cuh
+  src/ComputeForce.cu
+  src/ComputeGridGrid.cuh
+  src/ComputeGridGrid.cu
+  src/CudaUtil.cu
+  src/CudaUtil.cuh
+  src/Dihedral.cu
+  src/Exclude.cu
+  src/GrandBrownTown.cu
+  src/GrandBrownTown.cuh
+  src/imd.cpp
+  src/vmdsock.cpp
+  src/JamesBond.cu
+  src/RandomCUDA.cu
+  src/Reservoir.cu
+  src/TabulatedAngle.cu
+  src/TabulatedDihedral.cu
+  src/TabulatedMethods.cuh
+  src/TabulatedPotential.cu
+  src/useful.cu
   )
 
 ## Add optional libraries
