--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,8 +34,12 @@ endif()
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   ## Some CMake versions use -O2 for release; replace with -O3
-  string(REPLACE "-O2" "-O3" CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})
-  string(REPLACE "-O2" "-O3" CMAKE_CUDA_FLAGS_RELEASE ${CMAKE_CUDA_FLAGS_RELEASE})
+  if(CMAKE_CXX_FLAGS_RELEASE)
+    string(REPLACE "-O2" "-O3" CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})
+  endif()
+  if(CMAKE_CUDA_FLAGS_RELEASE)
+    string(REPLACE "-O2" "-O3" CMAKE_CUDA_FLAGS_RELEASE ${CMAKE_CUDA_FLAGS_RELEASE})
+  endif()
 endif()
 
 
