Add support for logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,11 +64,13 @@ endif()
 option(DEBUG "Build with debug flags" False)
 option(USE_NCCL "Use NCCL for single node GPU peer communication" False)
 option(USE_NVTX "Build with NVTX profiling ranges" False)
+option(USE_LOGGER "Build with SPDLog" True)
 
 # (not yet optional) message(STATUS "USE_CUDA: ${USE_CUDA}")
 message(STATUS "DEBUG: ${DEBUG}")
 message(STATUS "USE_NCCL: ${USE_NCCL}")
 message(STATUS "USE_NVTX: ${USE_NVTX}")
+message(STATUS "USE_LOGGER: ${USE_LOGGER}")
 
 
 ## Set flags before adding executable 
@@ -95,6 +97,28 @@ endif()
 if(USE_NCCL)
   add_definitions(-DUSE_NCCL)
   target_link_libraries("${PROJECT_NAME}" PRIVATE nccl)
+endif()
+if(USE_LOGGER)
+  # set(spdlog_DIR "extern/spdlog/include/spdlog")
+  # set(CMAKE_spdlog_DIR "${spdlog_DIR}")
+  # find_package(spdlog REQUIRED)
+  set(spdlog_DIR "extern/spdlog/include")
+  set(CMAKE_spdlog_DIR "${spdlog_DIR}")
+  add_subdirectory(extern/spdlog)
+  # find_package(spdlog REQUIRED)
+  include_directories(${spdlog_DIR})
+  set(SPDLOG_LEVEL SPDLOG_LEVEL_DEBUG)
+
+  # target_include_directories("lib${PROJECT_NAME}" PRIVATE ${spdlog_DIR})
+  # target_include_directories("${PROJECT_NAME}" PRIVATE ${spdlog_DIR})
+
+  # if(DEFINED ENV{CUDA_INCLUDE_DIRS})
+  #   set(CUDA_INCLUDE_DIRS $ENV{CUDA_INCLUDE_DIRS})
+  # endif()
+  # target_link_libraries("${PROJECT_NAME}" PRIVATE spdlog::spdlog_header_only)
+  # target_link_libraries("lib${PROJECT_NAME}" PRIVATE spdlog::spdlog_header_only)	
+  # target_link_libraries("lib${PROJECT_NAME}" spdlog)	
+  # target_link_libraries("${PROJECT_NAME}" spdlog)	
 endif()
 
 ## Two lines below needed?
@@ -146,6 +170,13 @@ if(USE_NCCL)
 endif()
 if(USE_NVTX)
   target_link_libraries("${PROJECT_NAME}" PUBLIC nvToolsExt)
+endif()
+if(USE_LOGGER)
+  add_definitions(-DUSE_LOGGER)
+  # include_directories(${spdlog_DIR})
+  target_include_directories("${PROJECT_NAME}" PRIVATE ${spdlog_DIR})
+  target_link_libraries("${PROJECT_NAME}" PRIVATE spdlog::spdlog_header_only)
+  add_compile_definitions(SPDLOG_ACTIVE_LEVEL=${SPDLOG_LEVEL})
 endif()
 
 install(TARGETS "${PROJECT_NAME}")
