--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library("lib${PROJECT_NAME}"
   ARBDException.cpp
   GPUManager.cpp
   ParticlePatch.cpp
+  SimSystem.cpp
   Integrator.cpp
   Integrator/CPU.cpp
   Integrator/CUDA.cu
