Started implementation of Random class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,11 @@ if(USE_CUDA)
   endif()
   # message(STATUS "CUDA_INC: ${CUDA_INCLUDE_DIRS}")
   include_directories(${CUDA_INCLUDE_DIRS})
+
+  if(NOT DEFINED CMAKE_CUDA_STANDARD)
+    set(CMAKE_CUDA_STANDARD 14)
+    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+  endif()
 endif()
 
 if(DEBUG)
@@ -176,6 +181,8 @@ if(USE_LOGGER)
   # include_directories(${spdlog_DIR})
   target_include_directories("${PROJECT_NAME}" PRIVATE ${spdlog_DIR})
   target_link_libraries("${PROJECT_NAME}" PRIVATE spdlog::spdlog_header_only)
+  # find_package(fmt)
+  # target_link_libraries("${PROJECT_NAME}" PRIVATE fmt::fmt)
   add_compile_definitions(SPDLOG_ACTIVE_LEVEL=${SPDLOG_LEVEL})
 endif()
 
