--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = extern/pybind11
 	url = ../pybind11
 	branch = stable
+[submodule "spdlog"]
+	path = spdlog
+	url = https://github.com/gabime/spdlog.git
