--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library("lib${PROJECT_NAME}"
   Resource.cu
   GPUManager.cpp
   ParticlePatch.cpp
-  SimSystem.cpp
+  #SimSystem.cpp
   Integrator.cpp
   Integrator/CPU.cpp
   Integrator/CUDA.cu
